syntax = "proto2";
package dicoprotos;

option java_package = "com.cherryworm.dico.protos";
option java_outer_classname = "SelfDescribingMessageProto";

message SelfDescribingMessage {
    enum MessageType {
        DO_TASK = 1;
        TASK_STATUS = 2;
        TASK_RESULT = 3;
        SUBMIT_TASK = 4;
        HANDSHAKE = 5;
	      SUBMIT_CODE = 6;
        WORKER_STATUS = 7;
        JOB_CLASS_CREATED = 8;
    }
    required MessageType type = 1;
    required bytes data = 2;
}
